Correcting spacing

--- a/new_site/site.css
+++ b/new_site/site.css
@@ -84,5 +84,4 @@ footer a{
 }
 
 .node-btn {
-	font-family: 'Source Code Pro', monospace;
 }
